--- a/NPL.ipynb
+++ b/NPL.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Untitled6.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPoGwxBkp3T8xTZKBWXlNju",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNS9LrPVQELJJnbdQly+GMZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1318,21 +1319,6 @@
       },
       "source": [
         ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "id": "DaVAKremQXbJ",
-        "colab": {}
-      },
-      "source": [
-        "A = \" New Delhi PM Narendra Modi is likely to address the nation again to announce his decision on whether the coronaviruslockdown will end on Tuesday. Before the decision, he will meet with Chief Ministers via video conference todayIn a video meeting with leaders of all parties on Wednesday PM Modi had said by all accounts the lifting of the lockdownis not possibleThe priority of the government is to save each and every life. The situation in the country is akin to a social emergency it has necessitated tough decisions and we must continue to remain vigilant said the PM according to political leaders who participated in the interaction\"\n",
-        "B =\"PM Modi's decision to order the three-week lockdown has helped slow the infection rate, foreign ministry additionalsecretary Vikas Swarup has said, even though it has impacted the economy and thousands of poor workers. Millions of people have lost their jobs, largely those who work on daily wages and have fled to their homes in villageMany states have sought an extension of the 21-day nationwide lockdown announced by PM Modi on March 25, saying they will not be able to handle a surge of COVID-19 cases. Odisha yesterday became the first state to announce a lockdown till the end of this month. PM Modi expressed to have good days after lockdown\"\n",
-        "C = \"J.P. Nadda on Thursday slammed Congress chief Sonia Gandhi's criticism of the lockdown as insensitive and indecentsaying this is not the time for politics when the entire country is fighting the coronavirus Top Congress leaders on Thursday discussed the situation arising out of the coronavirus outbreak with party chief Sonia Gandhi criticizing the Centre forunplanned implementation of the lockdown and calling for solidarity in meeting the challenge posed by the pandemic\"\n"
       ],
       "execution_count": 0,
       "outputs": []
